unpackaged/main/default/objects/Donation__c/fields/Care_Program__c.field-meta.xml
<CustomField>
    <fullName>Care_Program__c</fullName>
    <description>Populate Affiliate Name from Care Program.</description>
    <label>Care Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>