unpackaged/main/default/objects/Donation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>describe about this Donation.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>